[tool.poetry]
name = "abantether_python_sdk"
version = "0.0.10"
description = ""
authors = ["Iman Mousaei <imanmousaei1379@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
